# LanTerm

./: .gitignore  Cargo.toml  Makefile  README-zh.md  README.md
.github/workflows/: build_and_release.yml
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: Terminal.vue
src/: assets.rs  main.rs  pty.rs  ws.rs
