[package]
name = "lanterm"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
portable-pty = "0.9"
clap = { version = "4", features = ["derive"] }
rust-embed = "8"
anyhow = "1"
mime_guess = "2"
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"
